# trending

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  build.sh
cmake-scripts/: Functions.cmake  trending-config.cmake.in
trending/: Avg.cpp  Avg.h  Convex.cpp  Convex.h  Getter.h  Linear.cpp  Linear.h  Sine.cpp  Sine.h  Span.h  Trending.h  trending-config.h.in
trending/test/: AvgTest.cpp  CMakeLists.txt  ConvexTest.cpp  GetterTest.cpp  LinearTest.cpp  SineTest.cpp
